force-app/main/default/objects/Direct_Service__c/Direct_Service__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Direct Service</label>
    <nameField>
        <displayFormat>DirectService-{0}</displayFormat>
        <label>Direct Service #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direct Services</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>