force-app/main/default/objects/Direct_Service__c/fields/Activities_Offered__c.field-meta.xml
<CustomField>
    <fullName>Activities_Offered__c</fullName>
    <description>From Client Session or Group Session field of same name</description>
    <label>Activities Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Life Skills</fullName>
            </value>
            <value>
                <fullName>Recreation</fullName>
            </value>
            <value>
                <fullName>Exercise</fullName>
            </value>
            <value>
                <fullName>Socializing</fullName>
            </value>
            <value>
                <fullName>IEP Documentation Review</fullName>
            </value>
            <value>
                <fullName>Transcripts Documentation Review</fullName>
            </value>
            <value>
                <fullName>Verbal Advice</fullName>
            </value>
            <value>
                <fullName>Brochures</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>