force-app/main/default/objects/Direct_Service__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <description>Use for Cara Connects onboarding group service entries.</description>
    <label>Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled, No Show</fullName>
            </value>
            <value>
                <fullName>Attended, Traction Achieved</fullName>
            </value>
            <value>
                <fullName>Partially Attended, Follow Up</fullName>
            </value>
            <value>
                <fullName>Partially Attended, Opted Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>