force-app/main/default/objects/Direct_Service__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ECMv1
Use this field for checkbox attendance tracking. Use Client Attendance for more detailed attendance tracking.</description>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>