force-app/main/default/objects/Direct_Service__c/fields/Bill_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_Code__c</fullName>
    <description>From Client Session or Group Session field of same name</description>
    <inlineHelpText>Bill Code or Contract Code</inlineHelpText>
    <label>Bill Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>GF-HHS 10/11</fullName>
            </value>
            <value>
                <fullName>Private 10/11</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>