force-app/main/default/objects/Direct_Service__c/fields/Case_Participation__c.field-meta.xml
<CustomField>
    <fullName>Case_Participation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Participation</label>
    <referenceTo>Case_Participation__c</referenceTo>
    <relationshipLabel>Direct Services (Case Participation)</relationshipLabel>
    <relationshipName>Direct_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>