force-app/main/default/objects/Direct_Service__c/fields/Case_Record__c.field-meta.xml
<CustomField>
    <fullName>Case_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Record</label>
    <referenceTo>Case_Record__c</referenceTo>
    <relationshipLabel>Direct Services</relationshipLabel>
    <relationshipName>Direct_Services</relationshipName>
    <type>Lookup</type>
</CustomField>