force-app/main/default/objects/Direct_Service__c/fields/Case_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Status__c</fullName>
    <description>Field to capture the status of the Case Record at the time service was recorded.</description>
    <label>Case Record Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same as case record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>