force-app/main/default/objects/Direct_Service__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is set for Non-enrolled clients (i.e. Case_Record__c == null, Case_Participation__c == null)</description>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Direct Services (Client)</relationshipLabel>
    <relationshipName>Direct_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>