force-app/main/default/objects/Direct_Service__c/fields/Client_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Client_Attendance__c</fullName>
    <label>Client Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Partial Attendance</fullName>
            </value>
            <value>
                <fullName>Un-Excused Absence</fullName>
            </value>
            <value>
                <fullName>Excused Absence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>