force-app/main/default/objects/Direct_Service__c/fields/Client_Household__c.field-meta.xml
<CustomField>
    <fullName>Client_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to specify the client household receiving the service when record direct service directly from the client household.</description>
    <label>Client Household</label>
    <referenceTo>Client_Household__c</referenceTo>
    <relationshipLabel>Direct Services</relationshipLabel>
    <relationshipName>Direct_Services</relationshipName>
    <type>Lookup</type>
</CustomField>