force-app/main/default/objects/Direct_Service__c/fields/Client_Household_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Household_ID__c</fullName>
    <description>The Id of the Client Household for an enrolled client.</description>
    <formula>Case_Record__r.Client_Household__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Household ID</label>
    <type>Text</type>
</CustomField>