force-app/main/default/objects/Direct_Service__c/fields/Client_Session__c.field-meta.xml
<CustomField>
    <fullName>Client_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ECM v1</description>
    <label>Service Entry</label>
    <referenceTo>Client_Session__c</referenceTo>
    <relationshipLabel>Direct Services</relationshipLabel>
    <relationshipName>Direct_Services</relationshipName>
    <type>Lookup</type>
</CustomField>