force-app/main/default/objects/Direct_Service__c/fields/Condition_One__c.field-meta.xml
<CustomField>
    <fullName>Condition_One__c</fullName>
    <description>Used by Direct Service trigger rollup field: Case_Record__c.Number_of_Condition_One_Direct_Service__c&apos;.</description>
    <formula>&quot;Yes&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condition One</label>
    <type>Text</type>
</CustomField>