force-app/main/default/objects/Direct_Service__c/fields/Condition_Two__c.field-meta.xml
<CustomField>
    <fullName>Condition_Two__c</fullName>
    <description>Used by Direct Service trigger rollup field: Case_Record__c.Number_of_Condition_Two_Direct_Service__c.</description>
    <formula>&quot;Yes&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condition Two</label>
    <type>Text</type>
</CustomField>