force-app/main/default/objects/Direct_Service__c/fields/Connects_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Connects_Attendance__c</fullName>
    <description>Formula field to capture Connects onboarding attendance through one button.</description>
    <formula>if  (

contains( Group_Class_Session__r.Group_Class__r.Service__r.Name, &quot;FY18&quot;) || contains( Group_Class_Session__r.Group_Class__r.Service__r.Name, &quot;FY19&quot;),

text( Client_Attendance__c ),

text( Attendance__c )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connects Attendance</label>
    <type>Text</type>
</CustomField>