force-app/main/default/objects/Direct_Service__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Direct Services</relationshipLabel>
    <relationshipName>Direct_Services</relationshipName>
    <type>Lookup</type>
</CustomField>