force-app/main/default/objects/Direct_Service__c/fields/Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method__c</fullName>
    <description>From Client Session or Group Session field of same name</description>
    <label>Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Home Visit</fullName>
            </value>
            <value>
                <fullName>Mailings</fullName>
            </value>
            <value>
                <fullName>Office Visit</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>