force-app/main/default/objects/Direct_Service__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>DATEVALUE( Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Date</type>
</CustomField>