force-app/main/default/objects/Direct_Service__c/fields/Enrolled_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Client_Name__c</fullName>
    <formula>Case_Record__r.Client_Name__c</formula>
    <label>Enrolled Client Name</label>
    <type>Text</type>
</CustomField>