force-app/main/default/objects/Direct_Service__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <inlineHelpText>Goal of representation for AFC Legal Representation service.</inlineHelpText>
    <label>Goal</label>
    <type>TextArea</type>
</CustomField>