force-app/main/default/objects/Direct_Service__c/fields/Group_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Name__c</fullName>
    <formula>Group_Class_Session__r.Group_Class__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group/Class Name</label>
    <type>Text</type>
</CustomField>