force-app/main/default/objects/Direct_Service__c/fields/Group_Class_Session__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group-Class Service Entry</label>
    <referenceTo>Group_Class_Session__c</referenceTo>
    <relationshipLabel>Direct Services</relationshipLabel>
    <relationshipName>Direct_Services</relationshipName>
    <type>Lookup</type>
</CustomField>