force-app/main/default/objects/Direct_Service__c/fields/Group_Class_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Start_Date__c</fullName>
    <formula>Group_Class_Session__r.Group_Class__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group/Class Start Date</label>
    <type>Date</type>
</CustomField>