force-app/main/default/objects/Direct_Service__c/fields/Group_Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Type__c</fullName>
    <formula>text  (Group_Class_Session__r.Group_Class__r.Group_Class_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group/Class Type</label>
    <type>Text</type>
</CustomField>