force-app/main/default/objects/Direct_Service__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Magnet</fullName>
            </value>
            <value>
                <fullName>HFB</fullName>
            </value>
            <value>
                <fullName>Stonewall</fullName>
            </value>
            <value>
                <fullName>1035 Market</fullName>
            </value>
            <value>
                <fullName>Client Home</fullName>
            </value>
            <value>
                <fullName>Program Offices</fullName>
            </value>
            <value>
                <fullName>Offsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>