force-app/main/default/objects/Direct_Service__c/fields/Non_Enrolled_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Non_Enrolled_Client_Name__c</fullName>
    <formula>Client__r.Client_Full_Name__c</formula>
    <label>Non Enrolled Client Name</label>
    <type>Text</type>
</CustomField>