force-app/main/default/objects/Direct_Service__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objective</label>
    <referenceTo>Objective__c</referenceTo>
    <relationshipLabel>Direct Services</relationshipLabel>
    <relationshipName>Direct_Services</relationshipName>
    <type>Lookup</type>
</CustomField>