force-app/main/default/objects/Direct_Service__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OwnerId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Direct_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>