force-app/main/default/objects/Direct_Service__c/fields/Participant_ID__c.field-meta.xml
<CustomField>
    <fullName>Participant_ID__c</fullName>
    <formula>Case_Participation__r.Participant__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant ID</label>
    <type>Text</type>
</CustomField>