force-app/main/default/objects/Direct_Service__c/fields/Related_Goal__c.field-meta.xml
<CustomField>
    <fullName>Related_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Goal</label>
    <referenceTo>Goal__c</referenceTo>
    <relationshipLabel>Direct Services</relationshipLabel>
    <relationshipName>Direct_Services</relationshipName>
    <type>Lookup</type>
</CustomField>