force-app/main/default/objects/Direct_Service__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For an enrolled client, optional service associated with the direct service</description>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Direct Services</relationshipLabel>
    <relationshipName>Direct_Services</relationshipName>
    <type>Lookup</type>
</CustomField>