force-app/main/default/objects/Direct_Service__c/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <description>From ARIES db</description>
    <inlineHelpText>ARIES Direct Service field.</inlineHelpText>
    <label>Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Substance Use</fullName>
            </value>
            <value>
                <fullName>Incident Report</fullName>
            </value>
            <value>
                <fullName>Adherence</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Client Contact</fullName>
            </value>
            <value>
                <fullName>Education/Training</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Family/Social Support</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Health Education</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Impressions</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Nutrition</fullName>
            </value>
            <value>
                <fullName>Presenting Problem</fullName>
            </value>
            <value>
                <fullName>Rick Reduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>