force-app/main/default/objects/Direct_Service__c/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <description>Need to rationalize with HFB. Is this the same as Health Education Risk Reduction?</description>
    <label>Service Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HIV Test Education</fullName>
            </value>
            <value>
                <fullName>1 - Individual Counseling</fullName>
            </value>
            <value>
                <fullName>1P - Phone Call/E-mail with client/family</fullName>
            </value>
            <value>
                <fullName>2 - Family Counseling</fullName>
            </value>
            <value>
                <fullName>3 - Class (Life Skills Education)</fullName>
            </value>
            <value>
                <fullName>4 - Intake</fullName>
            </value>
            <value>
                <fullName>5C - Class (Life Skills Education)</fullName>
            </value>
            <value>
                <fullName>5ER - Expanded Assessment</fullName>
            </value>
            <value>
                <fullName>5FC - Family Counseling – with client (conjoint)</fullName>
            </value>
            <value>
                <fullName>5FNC - Family Counseling – no client</fullName>
            </value>
            <value>
                <fullName>5G - Group (Support Groups)</fullName>
            </value>
            <value>
                <fullName>5GM - Group Case Management</fullName>
            </value>
            <value>
                <fullName>5IC - Individual Counseling</fullName>
            </value>
            <value>
                <fullName>5M - Case Management</fullName>
            </value>
            <value>
                <fullName>5P - Phone Call</fullName>
            </value>
            <value>
                <fullName>5R - Assessment &amp; Referral</fullName>
            </value>
            <value>
                <fullName>5U - Urinalysis</fullName>
            </value>
            <value>
                <fullName>6 - Case Management</fullName>
            </value>
            <value>
                <fullName>6P - Phone Call/E-mail collateral contact</fullName>
            </value>
            <value>
                <fullName>7 - Crisis Intervention</fullName>
            </value>
            <value>
                <fullName>7FC - GCE Family Counseling – with client (conjoint)</fullName>
            </value>
            <value>
                <fullName>7G - Group (Support Groups)</fullName>
            </value>
            <value>
                <fullName>7IC - GCE Individual Counseling</fullName>
            </value>
            <value>
                <fullName>7M - GCE Case Management</fullName>
            </value>
            <value>
                <fullName>7R - GCE Assessment &amp; Referral</fullName>
            </value>
            <value>
                <fullName>8 - School Support</fullName>
            </value>
            <value>
                <fullName>9 - Group (Support Groups)</fullName>
            </value>
            <value>
                <fullName>10 - Supervision</fullName>
            </value>
            <value>
                <fullName>11 - Parenting Classes</fullName>
            </value>
            <value>
                <fullName>14 - Gain SS &amp; Quadrant Placement Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>