force-app/main/default/objects/Direct_Service__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <formula>Service__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Name</label>
    <type>Text</type>
</CustomField>