force-app/main/default/objects/Direct_Service__c/fields/Service_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Service_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Team Member</label>
    <referenceTo>Service_Team_Member__c</referenceTo>
    <relationshipLabel>Direct Services</relationshipLabel>
    <relationshipName>Direct_Services</relationshipName>
    <type>Lookup</type>
</CustomField>