force-app/main/default/objects/Direct_Service__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Service</fullName>
            </value>
            <value>
                <fullName>Indirect Service</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>