force-app/main/default/objects/Direct_Service__c/fields/Session_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Session_Assignments__c</fullName>
    <formula>1</formula>
    <label># Session Assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>