force-app/main/default/objects/Direct_Service__c/fields/Session_Attended_or_Excused__c.field-meta.xml
<CustomField>
    <fullName>Session_Attended_or_Excused__c</fullName>
    <formula>if (ispickval (Client_Attendance__c, &quot;Un-Excused Absence&quot;), 0, 
if (isnull (text(Client_Attendance__c)), 0,
1))</formula>
    <label># Session Attended or Excused</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>