force-app/main/default/objects/Direct_Service__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <formula>Group_Class_Session__r.Session_Date_TCP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Date</label>
    <type>Date</type>
</CustomField>