force-app/main/default/objects/Direct_Service__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <formula>text (Group_Class_Session__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Type</label>
    <type>Text</type>
</CustomField>