force-app/main/default/objects/Direct_Service__c/fields/Signed_Connects_CoC__c.field-meta.xml
<CustomField>
    <fullName>Signed_Connects_CoC__c</fullName>
    <label>Signed Connects CoC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>