force-app/main/default/objects/Direct_Service__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Direct_Services</relationshipName>
    <type>Lookup</type>
</CustomField>