force-app/main/default/objects/Direct_Service__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Attended Session</fullName>
            </value>
            <value>
                <fullName>Attended - Full Day</fullName>
            </value>
            <value>
                <fullName>Attended - Partial Day</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Did Not Show</fullName>
            </value>
            <value>
                <fullName>Absent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>