force-app/main/default/objects/Direct_Service__c/fields/UOS__c.field-meta.xml
<CustomField>
    <fullName>UOS__c</fullName>
    <label>UOS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>