force-app/main/default/objects/Direct_Service__c/fields/UOS_Name__c.field-meta.xml
<CustomField>
    <fullName>UOS_Name__c</fullName>
    <formula>Service__r.Amount_of_UOS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UOS Name</label>
    <type>Text</type>
</CustomField>