force-app/main/default/objects/Direct_Service__c/recordTypes/Foster_Care.recordType-meta.xml
<RecordType>
    <fullName>Foster_Care</fullName>
    <active>true</active>
    <description>ECM v1</description>
    <label>Foster Care</label>
</RecordType>