force-app/main/default/objects/Direct_Service__c/recordTypes/General_Direct_Service.recordType-meta.xml
<RecordType>
    <fullName>General_Direct_Service</fullName>
    <active>true</active>
    <description>General Direct Service entry and tracking.</description>
    <label>General Direct Service</label>
</RecordType>