force-app/main/default/objects/Direct_Service__c/validationRules/Exp_ClientHH_Excludes_Client_CP_CR.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_ClientHH_Excludes_Client_CP_CR</fullName>
    <active>true</active>
    <description>Case Participation, Case Record and Client cannot have values when Client Household has a value.</description>
    <errorConditionFormula>IF( Client_Household__c != null &amp;&amp; ( Case_Participation__c != null || Case_Record__c != null || Client__c != null), true, false)</errorConditionFormula>
    <errorMessage>Case Participation, Case Record and Client cannot have values when Client Household has a value.</errorMessage>
</ValidationRule>