force-app/main/default/objects/Direct_Service__c/validationRules/Exp_CP_Requires_CR.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_CP_Requires_CR</fullName>
    <active>true</active>
    <description>If Case Participation is set, then Case Record must also be set.</description>
    <errorConditionFormula>IF(Case_Participation__c != null &amp;&amp; Case_Record__c == null, true, false)</errorConditionFormula>
    <errorMessage>A value for Case Record is required when Case Participation has a value.</errorMessage>
</ValidationRule>